--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .Navbar img{
   height: 10vh;
-  margin-top: 10%;
+  /* margin-top: 10%; */
   padding: 0.7%;
   transform: scale(1.8);
 }
@@ -12,8 +12,8 @@
   position: fixed;
   z-index: 100;
   top: 0;
-  width: 100vw;
-  background-color: white;
+  width: 100%;
+  background-color: white !important;
 }
 .NavLink{
   width: 37vw;
@@ -35,17 +35,18 @@
   color: black;
 }
 .SearchContainer{
-  width: 35vw;
+  width: 30vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 30px;
 }
 .barbox{
   height: 40px;
   background-color: #f5f5f6;
   border: none;
   border-radius: 5px;
-  width: 82%;
+  width: 100%;
   padding-left: 3%;
   display: flex;
   align-items: center;
@@ -54,6 +55,7 @@
   height: 35px;
   width: 90%;
   background-color: #f5f5f6;
+  font-size: 13px;
   border: none;
   outline: none;
   margin-left: 5%;
@@ -64,6 +66,13 @@
   align-self: center;
   justify-content: space-around;
   margin-left: 2%;
+  /* width: 150px; */
+}
+.logged_in{
+  width: 150px;
+}
+.conditional_render i{
+  font-size: 18.5px;
 }
 .conditional_render button{
   margin: 12px;
@@ -79,14 +88,97 @@
   background-color:  rgb(240, 53, 91);
   color: white;
 }
-.conditional_render i{
-  font-size: 20px;
-  color: grey;
-  margin: 18px;
-  cursor: pointer;
+.collapse i{
+  color: black !important;
+}
+.collapse{
+  /* transform: translateY(0px); */
 }
 
+@media (max-width:991.5px){
+  .conditional_render i{
+    font-size: 20px;
+    color: grey;
+    margin: 18px;
+    cursor: pointer;
+  }
+  .NavLink{
+    margin-right: 0 !important;
+  }
+  .collapse{
+    background-color: rgba(245,245,246);
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw !important;
+  }
+  .barbox,.input_bar{
+    background-color: #fff;
+    margin: 5px 0;
+  }
+  .barbox{
+    width: 60vw;
+  }
+  .NavLink li{
+    margin: 5px 0;
+  }
+  .Navbar img{
+    transform: scale(1.9);
+  }
+  .SearchContainer input{
+    margin-top: 2.5px;
+  }
+  .SearchContainer{
+    width: 50vw;
+    transform: translateX(3%);
+  }
+  .SearchContainer i{
+    margin-right: 10px;
+  }
+  .navbar-toggler{
+    transform: translateY(-10%);
+    outline: none;
+  }
+  .navbar-toggler{
+    transform: translateY(-10%);
+    margin: 0;
+    outline: none;
+  }
+  .navbar-toggler-icon{
+    outline: none;
+  }
+}
+@media (max-width:1180px) and (min-width:991.5px){
+  .SearchContainer{
+    width: 27vw;
+  }
+  .barbox input{
+    width: 80%;
+  }
+}
 
-
-
-
+@media (max-width:700px){
+  .Navbar{
+    height: 8.5vh;
+  }
+  .navbar-toggler,.navbar-toggler-icon{
+    height: 25px;
+    border: none;
+    transform: translateY(-6px)
+  }
+  .Navbar img{
+    height: 7.2vh;
+  }
+}
+@media (max-width:536px){
+  .SearchContainer{
+    width: 80%;
+  }
+}
+@media (max-width:450px){
+  .SearchContainer input{
+    width: 85%;
+  }
+}
