--- a/src/Routes/ProductDetails/ProductDetails.css
+++ b/src/Routes/ProductDetails/ProductDetails.css
@@ -40,22 +40,35 @@
 .productDetailsLeft .heart{
   font-size: 20px;
   border-radius: 140px;
-  color: darkgrey;
-  background-color: floralwhite;
   position: absolute;
-  /* right: 17%;
-  top: 6.8%; */
+  cursor: pointer;
   top: 2%;
   right: 2%;
   padding: 4px;
   padding: 4px 8px;
+  border: floralwhite 1px solid;
 }
-.productDetailsLeft .heart:hover{
+
+.productDetailsLeft,.inacttive{
+  color: darkgrey;
+  background-color: floralwhite;
+}
+.productDetailsLeft,.inacttive:hover{
+  color: #ff3e6c;
+  background-color: transparent;
+  cursor: pointer;
+}
+.productDeatilsLeft,.acttive{
   color: #ff3e6c;
   background-color: transparent;
   border: floralwhite 1px solid;
   cursor: pointer;
 }
+.productDeatilsLeft,.acttive:hover{
+  color: darkgrey;
+  background-color: floralwhite;
+}
+
 .productDetailsRight>.seller{
   color: rgb(94, 90, 90);
   font-size: 14px;
@@ -86,6 +99,22 @@
   font-size: 12px;
   margin-bottom: 0px;
 }
+.productDetailsRight>.Quantity{
+  display: flex;
+  padding-top: 10px;
+}
+.productDetailsRight>.Quantity>.quantity{
+  margin-top: 14px;
+  margin-right: 15px;
+  font-size: 12.9px;
+  width: fit-content;
+}
+.productDetailsRight select{
+  height: 30px !important;
+  padding-top: 0px !important;
+  width: 60px !important;
+  padding-left: 10px;
+}
 .productDetailsRight>i{
   font-size: 12px;
   color: rgb(36, 202, 36);
@@ -99,6 +128,14 @@
   margin-top: 30px;
   width: 180px;
   margin-right: 20px;
+}
+.productDetailsRight>.productsButton>.activeBtnn{
+  background-color: #dc3545;
+  color: floralwhite;
+}
+.productDetailsRight>.productsButton>.activeBtnn:hover{
+  background-color: floralwhite;
+  color: #dc3545;
 }
 .productDetailsRight .tableLabelData{
   margin-left: 80px;
