Diplayed cart route with products in cart

--- a/src/Routes/Wishlist/Wishlist.css
+++ b/src/Routes/Wishlist/Wishlist.css
@@ -125,6 +125,9 @@
   display: flex;
   position: relative;
 }
+.wishlistItem>.wishContainer>a:hover{
+  color: black;
+}
 .wishlistItem img{
   height: 100%;
 }
