Added unverified email screen!

--- a/src/Routes/Login/Error/Error.css
+++ b/src/Routes/Login/Error/Error.css
@@ -1,9 +1,11 @@
 .error img{
   width: 20%;
-  margin-top: 17%;
+  /* margin-top: 12%; */
+  margin-bottom: 5%;
 }
 .error h5{
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  margin-bottom: 35px;
 }
 .error button{
   background-color: black;
@@ -12,6 +14,7 @@
   color: white;
   border-radius: 4px;
   width: 24%;
+  margin: 0;
 }
 .error button:hover{
   background-color: rgb(51, 43, 43);
@@ -19,6 +22,9 @@
 .error{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+}
+.error h6{
+  margin-top: 10px;
 }
