--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -41,3 +41,15 @@
 .footer h6:hover{
   color: #fff;
 }
+@media (max-width:700px){
+  .footer h4{
+    font-size: 12px;
+  }
+  .footer h5{
+    font-size: 10px;
+  }
+  .fontIcon i{
+    margin: 8px;
+    font-size: 14px;
+  }
+}
