--- a/src/components/FeaturedSection/FeaturedSection.css
+++ b/src/components/FeaturedSection/FeaturedSection.css
@@ -23,3 +23,22 @@
   text-align: center;
   margin-bottom: 20px;
 }
+@media (max-width:701px){
+  .featured h3{
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 25px;
+  }
+}
+@media (max-width:601px){
+  .featured h3{
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 20px;
+  }
+  .featured h5{
+    font-weight: 300;
+    font-size: 12px;
+    text-decoration: none;
+  }
+}
