--- a/src/Routes/Login/Login.css
+++ b/src/Routes/Login/Login.css
@@ -90,7 +90,7 @@
 }
 .login button{
   height: 40px;
-  margin: 12px auto;
+  margin: 30px auto 20px;
   width: 75%;
   border-radius: 5px;
   border: solid 1.8px black;
@@ -108,6 +108,17 @@
   width: 100%;
   text-align: center;
 }
+.login .forgotPass{
+  font-weight: 400;
+  font-size: 11px;
+  text-decoration: underline;
+  color: black;
+  text-align: start;
+  position: absolute;
+  cursor: pointer;
+  margin-top: 0px;
+}
+
 @media (max-width:780px){
   .login_box{
     margin: 0px 30px
