Seller can publish a product & view their product details

--- a/src/Routes/Seller/SellerProducts/SellerProductItem/SellerProductItem.css
+++ b/src/Routes/Seller/SellerProducts/SellerProductItem/SellerProductItem.css
@@ -1,7 +1,7 @@
 .sellerSearchItem{
   width: 80%;
   border: #ccc 1.5px solid;
-  margin: 10px 0;
+  margin: 20px auto;
 }
 
 .sellerSearchItemHeader{
