--- a/src/Routes/SelectedCategory/SelectedCategory.css
+++ b/src/Routes/SelectedCategory/SelectedCategory.css
@@ -51,3 +51,52 @@
 .loading img{
   width: 40%;
 }
+
+@media (max-width:900px){
+  .sidebar{
+    width: 20%;
+  }
+}
+@media (max-width:687px){
+  .sidebar{
+    width: 22%;
+  }
+  .displayContainer>.product{
+    width: 180px;
+    margin: 0 10px;
+    margin-top: 20px;
+  }
+}
+@media (max-width:600px){
+  .sidebar{
+    width: 23%;
+  }
+  .products_display{
+    margin-left: 22vh;
+  }
+}
+@media (max-width:580px){
+  .sidebar{
+    width: 24.6%;
+  }
+}
+@media (max-width:524px){
+  .sidebar{
+    width: 28%;
+  }
+}
+@media (max-width:446px){
+  .sidebar{
+    width: 35%;
+  }
+}
+@media (max-width:360px){
+  .sidebar{
+    width: 36%;
+  }
+}
+@media (max-width:701px){
+  .selected_page{
+    margin-top: 9vh;
+  }
+}
