--- a/src/components/ProductBlock/ProductBlock.css
+++ b/src/components/ProductBlock/ProductBlock.css
@@ -5,6 +5,7 @@
   margin: 0 20px;
   margin-top: 20px;
   cursor: pointer;
+  z-index: 2;
 }
 .product:hover{
   /* box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
