--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: center;
   transform: translateX(22px);
+  /* width: fit-content; */
 }
 .sub_category a{
   font-size: 15px;
@@ -16,4 +17,11 @@ a{
 }
 a:hover{
   text-decoration: none;
+}
+
+
+@media (max-width:360px){
+  .sub_category{
+    transform: translateX(10px);
+  }
 }
