--- a/src/components/ProductBlock/ProductBlock.css
+++ b/src/components/ProductBlock/ProductBlock.css
@@ -6,6 +6,7 @@
   margin-top: 20px;
   cursor: pointer;
   z-index: 2;
+  background-color: white;
 }
 .product:hover{
   /* box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
